--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,8 +30,8 @@ jobs:
           CI: true
         with:
           arguments: genSources build
-
-      - name: Upload artifact
+      
+      - name: Run
         run: |
           function gradleprop {
               grep "${1}" gradle.properties|cut -d'=' -f2
@@ -49,4 +49,10 @@ jobs:
           cd zip
           zip -r liquidbounce.zip *
           md5sum liquidbounce.zip
-          curl --connect-timeout 30 -m 300 -X POST -F "artifact=@liquidbounce.zip" -H "Authorization: ${{ secrets.NIGHTLY_PASS }}" -F "gh_id=${{ github.event.head_commit.id }}" -F "gh_ref=${{ github.ref }}" -F "gh_message=${{ github.event.head_commit.message }}" -F "gh_timestamp=${{ github.event.head_commit.timestamp }}" -F "lb_version=$LB_VERSION" -F "mc_version=$MINECRAFT_VERSION" -F "subsystem=fabric" -F "fabric_loader_version=$LOADER_VERSION" -F "fabric_api_version=$FABRICAPI_VERSION" -F "kotlin_version=$KOTLIN_VERSION" -F "fabric_kotlin_version=$FABRIC_KOTLIN_VERSION" https://api.liquidbounce.net/api/v1/version/new
+        
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3.1.2
+        with: 
+         name: a
+         path: zip
+        
