--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,5 +54,5 @@ jobs:
         uses: actions/upload-artifact@v3.1.2
         with: 
          name: a
-         path: zip
+         path: .
         
